--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,22 +3,58 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  /* background-color: #fff6ff;
+  border-radius: 20px; */
+}
+
+body {
+  margin: 0;
+  display: flex;
+  place-items: center;
+  min-width: 320px;
+  min-height: 100vh;
+  background-image: linear-gradient(rgba(255, 231, 255, 1), rgba(218, 171, 217, 1), rgba(207, 78, 212, 1));
 }
 
 
+.component {
+  padding: 10px;
+  margin: 20px 10px 10px 10px;
+  background-color: rgba(255, 246, 255);
+  border-radius: 20px;
+}
 
-.week-layout {
+header {
+  position: sticky;
+  top: 0;
+}
+
+/* .week-layout {
   display: flex;
   flex-direction: row;
   gap: 7%;
-}
-
-.score-component {
-  display: flex;
-  flex-direction: row;
-  text-align: right;
-}
+} */
 
 .done {
   text-decoration: line-through;
+}
+
+a {
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
+}
+a:hover {
+  color: #535bf2;
+}
+
+
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
+}
+
+#calendar-score {
+  display: flex;
+  justify-content: space-around;
 }
