--- a/client/src/App.css
+++ b/client/src/App.css
@@ -50,7 +50,7 @@ a:hover {
 
 
 h1 {
-  font-size: 3.2em;
+  font-size: 2.5em;
   line-height: 1.1;
 }
 
@@ -58,3 +58,26 @@ h1 {
   display: flex;
   justify-content: space-around;
 }
+
+.principal-button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #c0fcf8;
+  cursor: pointer;
+  transition: border-color 0.25s;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+.principal-button:hover {
+  background-color: #5abab6;
+}
+
+/* button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
+} */
